--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,164 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.header {
+  width: 100%;
+  max-height: 50px;
+  background-color:steelblue;
+  color: white;
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.logo {
+  font-size: 15px;
+  margin: 5px 10px 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  
+}
+
+.menu ul {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  color: white;
+}
+
+.menu li {
+  margin-right: 20px;
+  color: white;
+  cursor: pointer;
+  
+}
+
+.menu ul li a{
+  font-family: sans-serif;
+  font-size: 1.2em; 
+  color: white;
+}
+
+.menu ul li a:hover{
+background-color: midnightblue;
+color: white;
+}
+
+.page {
+  min-height: 100vh;
+  width: 100%;
+  display: flex;
+  border-radius: 2px color white;
+  background-color:lavenderblush ;
+  color: white;
+  padding: 20px;
+  padding-top: 10px;
+  margin-bottom: 20px;
+  margin-right: 20px;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+.system {
+  border-radius: 2px solid white;
+  padding: 5px 20px 20px;
+  margin-bottom: 40px;
+  width: 33%;
+  height: 200px;
+  box-sizing: border-box;
+  background-color: midnightblue;
+}
+
+
+.system1 {
+  border-radius: 10px;
+  padding: 5px 10px 10px;
+  margin: 30px;
+  margin-bottom: 30px;
+  width: 52%;
+  height: 110px;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+  text-align: center;
+  font-family: sans-serif;
+}
+
+
+.person {
+  margin: 10px 0;
+}
+.img{
+  border-radius: 10px;
+  width: 70%;
+  height: auto;
+}
+
+.img-logo{
+  border-radius: 2px;
+  width: 40px;
+  height: 40px;
+  margin-right: 10px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.app {
+  border-radius: 2px solid white;
+  padding: 10px 10px 10px 10px;
+  margin-bottom: 10px;
+  width: 27%;
+  box-sizing: border-box;
+  background-color: midnightblue;
+}
+
+.card-personal{
+  border-radius: 10px;
+  background-color:steelblue ;
+  margin: 10px;
+  padding: 10px;
+  height: 140px;
+  width: 330px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.datos-personal{
+  width: 220px;
+  height: 100%;
+  margin: 10px 10px 10px;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.imagen-personal{
+  height: 90%;
+  width: auto;
+  align-items: center;
+  justify-content: center;
+}
+
+h6{
+  line-height: 1.5;
+  color: white
+}
+
+a{
+  color: white;
+}
+
+.systemobjetivos {
+  background-color: rebeccapurple;
+  border-radius: 10px;
+  padding: 5px 20px 20px;
+  margin: 50px;
+  margin-bottom: 40px;
+  width: 33%;
+  height: 200px;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+  text-align: center;
 }
